[project]
name = "easy-gabriel"
version = "0.1.0"
description = "An easier way for social science researchers to use OpenAI-GABRIEL"
readme = "README.md"
authors = [
    { name = "SongTan", email = "sepinetam@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-api-polling>=0.1.5",
    "openai-gabriel>=1.1.1",
]

[project.scripts]
easy-gabriel = "easy_gabriel:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
